--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   },
   "repository": "https://github.com/LemmyNet/lemmy-ui",
   "dependencies": {
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/delimiter": "^1.2.0",
     "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/embed": "^2.5.2",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/link": "^2.4.1",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/table": "^2.0.4",
     "@typescript-eslint/parser": "^5.31.0",
     "autosize": "^5.0.1",
     "check-password-strength": "^2.0.7",
