--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/embed": "^2.5.2",
     "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
     "@editorjs/link": "^2.4.1",
     "@editorjs/list": "^1.7.0",
     "@editorjs/quote": "^2.4.0",
