--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "choices.js": "^10.1.0",
     "classnames": "^2.3.1",
     "editorjs-html": "^3.4.2",
+    "editorjs-link-with-target": "^1.0.6",
     "emoji-short-name": "^2.0.0",
     "express": "~4.18.1",
     "i18next": "^21.8.14",
